src/style.css
/* Mobile first */

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

.no-script {
	display: grid;
	place-items: center;
	position: fixed;
	z-index: 10000;
	width: 100%;
	height: 100%;
	background-color: black;
}

.no-script__text {
	color: #dddddd;
	text-align: center;
	font-size: 8vmin;
}

body {
	background-color: #eee;
	font-family: "Lato", sans-serif;
	font-size: 1rem;
}

/* weird preload hack, fixes flickering when changing info-button image
 * on hover in firefox
 */
body::after {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 1px;
	height: 1px;
	opacity: 0.00001;
	z-index: -99999999;

	/* urls seperated by space, e.g. url("a") url("b") */
	content: url("images/info-button-animated.webp");
}

button {
	font-size: inherit;
	font-family: inherit;
	border: none;
	outline: none;
}

.background {
	--image-url: url("");
	background-image: var(--image-url);
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100vh;
	z-index: -999999;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	filter: contrast(110%);
}

.header {
	position: relative;
	display: flex;
	justify-content: space-between;
	align-items: center;
	font-size: 1rem;
	padding-left: 15px;
	padding-right: 0.6em; /* beware info-button rotation overflow */
	padding-top: 0.2em;
}

.header__title {
	font-family: "Pacifico";
	font-size: 1.4em;
	font-weight: normal;
	margin: 0;
	color: white;
	text-transform: lowercase;
	text-shadow: 0px 0px 0.75em rgba(5%, 5%, 5%, 0.3);
	user-select: none;
}

.button-img {
	background-color: transparent;
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	width: 2.6em;
	height: 2.6em;
	filter: drop-shadow(0 0 0.25em rgba(5%, 5%, 5%, 0.3))
		drop-shadow(0 0 0.05em rgba(5%, 5%, 5%, 0.6));
	margin-left: 0.2em;
	margin-right: 0.2em;
}

.button-img:hover {
	cursor: pointer;
}

.button-img-up {
	background-image: url("images/up.svg");
}

.button-img-down {
	background-image: url("images/down.svg");
}

.button-img-swap {
	background-image: url("images/swap.svg");
}

.button-img-random {
	background-image: url("images/random.svg");
	filter: drop-shadow(0 0 0.25em rgba(5%, 5%, 5%, 0.2))
		drop-shadow(0 0 0.05em rgba(5%, 5%, 5%, 0.5));
}

.button-img-unitinu {
	background-image: url("images/unitinu.svg");
}

.button-img-unitinu-container {
	--angle: 13deg;
}

.button-img-unitinu-container.unitinu-side-none {
	opacity: 0.35;
}

.button-img-unitinu-container.unitinu-side-none:hover {
	opacity: 0.45;
}

.button-img-unitinu-container.unitinu-side-left.unitinu-angled-up {
	transform: rotateZ(calc(var(--angle) * -1));
}

.button-img-unitinu-container.unitinu-side-left.unitinu-angled-down {
	transform: rotateZ(calc(var(--angle)));
}

.button-img-unitinu-container.unitinu-side-right {
	transform: scaleX(-1);
}

.button-img-unitinu-container.unitinu-side-right.unitinu-angled-up {
	transform: scaleX(-1) rotateZ(calc(var(--angle) * -1));
}

.button-img-unitinu-container.unitinu-side-right.unitinu-angled-down {
	transform: scaleX(-1) rotateZ(calc(var(--angle)));
}

.name {
	word-break: break-word;
}

.main {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
}

.talent-select-container {
	flex-basis: 46%;
}

/* .talent-select-box {
} */

.box {
	margin: 0.25em;
	padding: 0.25em;
	color: white;
	text-shadow: 0px 0px 0.3em rgba(0, 0, 0, 0.6), 0px 0px 0.2em rgba(0, 0, 0, 0.4);
}

.talent-select-box-1 {
	margin-right: 0;
}

.talent-select-box-2 {
	margin-left: 0;
}

.talent-select-content {
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	flex-direction: column;
}

.talent-select-image {
	--image-url: url("");
	background-color: white;
	background-image: var(--image-url);
	width: 100%;
	padding-top: 100%; /* aspect ratio hack */
	border-radius: 8px;
	background-position: center;
	background-size: cover;
}

.talent-select-image:hover {
	cursor: pointer;
}

.talent-select-image.dropdown-visible {
	border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px;
}

.talent-select-name {
	min-height: 2.05em;
	text-align: center;
	font-weight: 500;
	user-select: none;
}

.talent-select-name.dropdown-visible {
	visibility: hidden;
}

/* .talent-select-name__name {
} */

.talent-select-name__name:hover {
	cursor: pointer;
}

.talent-dropdown {
	position: relative;
	align-self: start;
	width: 100%;
	visibility: hidden;
	z-index: 500;
}

.talent-dropdown.dropdown-visible {
	visibility: visible;
}

.talent-dropdown-content {
	position: absolute;
	width: 100%;
	background-image: linear-gradient(rgba(95%, 95%, 95%, 0.9), rgba(85%, 85%, 85%, 0.85));
	z-index: 100;
	border-bottom-left-radius: 8px;
	border-bottom-right-radius: 8px;
}

.talent-dropdown-entries {
	position: relative;
	max-height: 25em;
	overflow-y: auto;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.talent-dropdown-entries__entry {
	display: flex;
	align-items: center;
	user-select: none;
	padding: 0.2em;
	padding-left: 0.4em;
}

.talent-dropdown-entries__entry:hover {
	background-color: rgba(95%, 95%, 95%, 0.4);
}

.talent-dropdown-entries__entry--highlighted {
	background-color: rgba(100%, 100%, 100%, 0.6);
}

.talent-dropdown-entries__entry__image {
	--image-url: url("");
	background-color: white;
	background-image: var(--image-url);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	flex-shrink: 0;
	border-radius: 0.2em;
	width: 2.5em;
	height: 2.5em;
	margin-right: 0.4em;
}

.talent-dropdown-entries__entry__name {
	overflow: hidden;
	text-overflow: ellipsis;
	font-size: 1em;
}

.talent-select-button-imgs {
	display: flex;
}

.talent-select-button-imgs.dropdown-visible {
	visibility: hidden;
}

.result-box {
	flex-basis: 70%;
	order: 3;
	display: flex;
	flex-direction: column;
	align-items: center;
}
/* ... */

